--- a/src/WebbenVNext/Views/Shared/_Layout.cshtml
+++ b/src/WebbenVNext/Views/Shared/_Layout.cshtml
@@ -6,11 +6,12 @@
 
     <title>Webben vNext</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" />
 </head>
 <body>
     <div class="container">
         @RenderBody()
     </div>
+    <script src="dist/app.js"></script>
 </body>
 </html>
