--- a/src/WebbenVNext/Views/Shared/_Layout.cshtml
+++ b/src/WebbenVNext/Views/Shared/_Layout.cshtml
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" />
 </head>
 <body>
-<div class="container">
-    @RenderBody()
-</div>
+    <div class="container">
+        @RenderBody()
+    </div>
+    <script src="dist/app.js"></script>
 </body>
 </html>
