Enable preview for image uploads

--- a/src/WebbenVNext/Views/Home/Index.cshtml
+++ b/src/WebbenVNext/Views/Home/Index.cshtml
@@ -14,6 +14,9 @@
                 </form>
             </div>
         </div>
+        
+        <h3>Förhandsgranskning</h3>
+        <div id="files-preview"></div>
     </div>
     <div class="col-md-6">
         <h2>Bildbibliotek</h2>
